# madrust2019

tutorial-1/src/: main.rs
tutorial-2/: Cargo.toml
tutorial-2/src/: main.rs
tutorial-3/: Cargo.toml
tutorial-3/src/: main.rs
tutorial-4/: Cargo.toml
tutorial-4/src/: main.rs
tutorial-5/: Cargo.toml
tutorial-5/src/: main.rs
tutorial-6/: Cargo.toml
tutorial-6/src/: main.rs
tutorial-7/: Cargo.toml
tutorial-7/src/: lib.rs  sink.rs
